# CSI230

Final/Projects/connect4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Final/Projects/connect4/Final/: Makefile  cmake_install.cmake
Final/Projects/connect4/Final/sleepy_discord/: Makefile  cmake_install.cmake
Final/Projects/connect4/asio-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Final/Projects/connect4/asio-download/asio-download-prefix/tmp/: asio-download-gitclone.cmake  asio-download-gitupdate.cmake
Final/Projects/connect4/cpr-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Final/Projects/connect4/cpr-download/cpr-download-prefix/tmp/: cpr-download-gitclone.cmake  cpr-download-gitupdate.cmake
Final/Projects/connect4/includes/headers/: client.h  connect4.h  constants.h
Final/Projects/connect4/includes/src/: client.cpp  connect4.cpp  main.cpp
Final/Projects/connect4/websocketpp-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Final/Projects/connect4/websocketpp-download/websocketpp-download-prefix/tmp/: websocketpp-download-gitclone.cmake  websocketpp-download-gitupdate.cmake
Final/include/sleepy_discord/: version.h
Lab10/Lab10.1/week10/include/: util.h
Lab10/Lab10.2/: README.md  hello.sh
Lab10/Lab10.2/week10/: concap.csv.kml  mylogfile.txt
Lab6.1/: color.sh
Project_1/: Project1.sh  README.md
Project_2/: ProfileCleanup.sh  Project2.sh  README.md  emails.txt  singleemail.txt
Week11/: myxmlfile.xml
Week11/src/: main.cpp
(+8 files in other folders)
